@@ -351,6 +351,9 @@ PIG-1309: Map-side Cogroup (ashutoshc)
 
 BUG FIXES
 
+PIG-1892: Bug in new logical plan : No output generated even though there are
+valid records (daijy)
+
 PIG-1808: Error message in 0.8 not much helpful as compared to 0.7 (daijy)
 
 PIG-1850: Order by is failing with ClassCastException if schema is undefined
